--- a/config.ini
+++ b/config.ini
@@ -7,5 +7,6 @@ row_len = 27
 error_prefix = ---->
 feedback_prefix = --
 bad_character_sign = ?
-ERR_SUFFIX = ERR
-ILL_SUFFIX = ILL
+err_suffix = ERR
+ill_suffix = ILL
+amb_suffix = AMB
